Add some darkness

--- a/_posts/2016-08-24-test.md
+++ b/_posts/2016-08-24-test.md
@@ -11,23 +11,21 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 ### Sub Title
 
-```javascript
-// some code
-function loadJSON(path, success, error) {
-  var xhr = new XMLHttpRequest();
-  xhr.onreadystatechange = function()
-  {
-    if (xhr.readyState === XMLHttpRequest.DONE) {
-      if (xhr.status === 200) {
-        if (success)
-        success(JSON.parse(xhr.responseText));
-      } else {
-        if (error)
-        error(xhr);
-      }
-    }
-  };
-  xhr.open("GET", path, true);
-  xhr.send();
+```scss
+.blog-index {
+  list-style: none;
+  margin-left: 0;
+}
+
+.blog-index-post {
+  margin-bottom: golden-ratio($base-font-size, 3);
+}
+
+.blog-index-link {
+  color: $main-color-strong;
+  &:hover {
+    text-decoration: none;
+    color: $header-color;
+  }
 }
 ```
